config-ext/load-balancer.yml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-lb
  namespace: #@ data.values.NAMESPACE
spec:
  type: LoadBalancer
  ports:
  - name: http-gateway
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: gateway
