config-ext/ingress.yml
#@ load("@ytt:data", "data")
---
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: gateway
  namespace: #@ data.values.NAMESPACE
spec:
  rules:
  - host: #@ data.values.DOMAIN
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: gateway
            port:
              number: 80
